2008-01-18  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update kleopatra and kdelibs.

2008-01-16  Marcus Brinkmann  <marcus@g10code.de>

	* src/installer.nsi (MUI_WELCOME_TITLE, MUI_WELCOMEPAGE_TEXT):
	Define to ${WELCOME_TITLE_STR} and ${ABOUT_STR} respectively.
	(T_WelcomeTitle, T_About): Remove language strings.
	* src/gpg4win.nsi (WELCOME_TITLE_ENGLISH, WELCOME_TITLE_GERMAN)
	(ABOUT_GERMAN, ABOUT_ENGLISH): Removed macros.
	(WELCOME_TITLE_STR, ABOUT_STR): New macros.
	(T_WelcomeTitleGpg4win, T_AboutGpg4win): New language strings.
	* src/gpg4win-src.nsi (WELCOME_TITLE_ENGLISH, WELCOME_TITLE_GERMAN)
	(ABOUT_GERMAN, ABOUT_ENGLISH): Removed macros.
	(WELCOME_TITLE_STR, ABOUT_STR): New macros.
	(T_WelcomeTitleGpg4winSrc, T_AboutGpg4winSrc): New language strings.

2008-01-15  Marcus Brinkmann  <marcus@g10code.de>

	* patches/gnupg-2.0.8/01-agent-call-pinentry.patch: Rename to ...
	* patches/gnupg2-2.0.8/01-agent-call-pinentry.patch: ... this.
	* Makefile.am (EXTRA_DIST): Also here.

	* Makefile.am (EXTRA_DIST): Add
	patches/gnupg-2.0.8/01-agent-call-pinentry.patch.
	* patches/gnupg-2.0.8/01-agent-call-pinentry.patch: New file.

	* src/g4wihelp.c (service_create): Use LocalSystem for now.

2008-01-13  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update kdelibs, kdesupport, kleopatra.

	* src/inst-kdelibs.nsi: Update to latest version.
	* src/inst-kdesupport.nsi: Update to latest version.
	* src/uninst-kdesupport.nsi: Update to latest version.
	* src/inst-kleopatra.nsi: Update to latest version.

	* src/inst-gnupg2.nsi: Fix last change.
	* src/uninst-gnupg2.nsi: Uninstall gpgconf-conf.skel.

	* src/uninst-qt.nsi: Uninstall qsqlited4.dll.

2008-01-10  Marcus Brinkmann  <marcus@g10code.de>

	* src/gpg4win.nsi: New variable bpdir.
	* src/gpg4win-src.nsi: Likewise.
	* src/inst-gnupg2.nsi: New variable source and install a skeleton
	file for gpgconf.conf.

2008-01-08  Marcus Brinkmann  <marcus@g10code.de>
