@@ -1,5 +1,11 @@
 2008-01-18  Marcus Brinkmann  <marcus@g10code.de>
 
+	* packages/packages.current: Update gpgol.
+	* src/Makefile.am (gpg4win_pkg_gpgol_post_install): New macro.
+	* src/inst-gpgol.nsi: Install the gpgol.pdf technical
+	documentation.
+	* src/uninst-gpgol.nsi: Uninstall it (and many directories).
+
 	* packages/packages.current: Update kleopatra and kdelibs.
 
 2008-01-16  Marcus Brinkmann  <marcus@g10code.de>
